--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,2 +1,4 @@
 option('use_system_libs', type : 'boolean', value : true,
        description: 'Whether to generally link with system libraries')
+option('use_pcl_ground_based_people_detection', type : 'boolean', value : false,
+       description: 'Whether to use pcl::people::GroundBasedPeopleDetectionApp')
