build our fork of dlib as a subproject
We have some custom changes to dlib so we can't rely on a system package
for dlib. Meson supports the idea of a subproject where we can point to
a specific git repo and commit hash to build.

--- a/meson.build
+++ b/meson.build
@@ -15,15 +15,17 @@ inc = include_directories(
 	'src/imgui',
 	'src/UnityPluginAPI')
 
-deps = []
 client_api_defines = []
+
+dlib_sp = subproject('dlib')
+dlib_dep = dlib_sp.get_variable('dlib_dep')
+
 if use_system_libs
     glm_dep = dependency('glm')
     libpng_dep = dependency('libpng')
     freenect_dep = dependency('libfreenect')
     glfw_dep = dependency('glfw3')
     epoxy_dep = dependency('epoxy')
-    dlib_dep = dependency('dlib-1')
 
     boost_modules = [
         'date_time',
