--- a/meson.build
+++ b/meson.build
@@ -15,49 +15,56 @@ inc = include_directories(
 	'src/imgui',
 	'src/UnityPluginAPI')
 
-client_api_defines = []
+client_api_defines = [
+    '-DGLM_ENABLE_EXPERIMENTAL'
+]
 
 dlib_sp = subproject('dlib')
 dlib_dep = dlib_sp.get_variable('dlib_dep')
 
 if use_system_libs
-    glm_dep = dependency('glm')
-    libpng_dep = dependency('libpng')
-    freenect_dep = dependency('libfreenect')
-    glfw_dep = dependency('glfw3')
-    epoxy_dep = dependency('epoxy')
-
-    boost_modules = [
-        'date_time',
-        'iostreams',
-        'filesystem',
-        'wserialization',
-        'serialization',
-        'thread',
-        'system'
-    ]
-    boost_deps = dependency('boost', modules: boost_modules)
+    glm_dep = dependency('glm', fallback: [ 'glm', 'glm_dep'])
+    libpng_dep = dependency('libpng', fallback: [ 'libpng', 'png_dep' ])
 
     pcl_deps = []
-    pcl_deps += dependency('pcl_common-1.8')
-    pcl_deps += dependency('pcl_features-1.8')
-    pcl_deps += dependency('pcl_filters-1.8')
-    pcl_deps += dependency('pcl_io-1.8')
-    pcl_deps += dependency('pcl_kdtree-1.8')
-    pcl_deps += dependency('pcl_keypoints-1.8')
-    pcl_deps += dependency('pcl_ml-1.8')
-    pcl_deps += dependency('pcl_octree-1.8')
-    pcl_deps += dependency('pcl_recognition-1.8')
-    pcl_deps += dependency('pcl_registration-1.8')
-    pcl_deps += dependency('pcl_sample_consensus-1.8')
-    pcl_deps += dependency('pcl_search-1.8')
-    pcl_deps += dependency('pcl_segmentation-1.8')
-    pcl_deps += dependency('pcl_stereo-1.8')
-    pcl_deps += dependency('pcl_surface-1.8')
-    pcl_deps += dependency('pcl_tracking-1.8')
+    pcl_deps += dependency('pcl_common-1.8', fallback: [ 'pcl', 'common_dep' ])
+    pcl_deps += dependency('pcl_features-1.8', fallback: [ 'pcl', 'features_dep' ])
+    pcl_deps += dependency('pcl_filters-1.8', fallback: [ 'pcl', 'filters_dep' ])
+    pcl_deps += dependency('pcl_kdtree-1.8', fallback: [ 'pcl', 'kdtree_dep' ])
+    pcl_deps += dependency('pcl_ml-1.8', fallback: [ 'pcl', 'ml_dep' ])
+    pcl_deps += dependency('pcl_octree-1.8', fallback: [ 'pcl', 'octree_dep' ])
+    pcl_deps += dependency('pcl_sample_consensus-1.8', fallback: [ 'pcl', 'sample_consensus_dep' ])
+    pcl_deps += dependency('pcl_search-1.8', fallback: [ 'pcl', 'search_dep' ])
+    pcl_deps += dependency('pcl_segmentation-1.8', fallback: [ 'pcl', 'segmentation_dep' ])
+
+#    pcl_deps += dependency('pcl_io-1.8', fallback: [ 'pcl', 'io_dep' ])
+#    pcl_deps += dependency('pcl_keypoints-1.8', fallback: [ 'pcl', 'keypoints_dep' ])
+#    pcl_deps += dependency('pcl_recognition-1.8', fallback: [ 'pcl', 'recognition_dep' ])
+#    pcl_deps += dependency('pcl_registration-1.8', fallback: [ 'pcl', 'registration_dep' ])
+#    pcl_deps += dependency('pcl_stereo-1.8', fallback: [ 'pcl', 'stereo_dep' ])
+#    pcl_deps += dependency('pcl_surface-1.8', fallback: [ 'pcl', 'surface_dep' ])
+#    pcl_deps += dependency('pcl_tracking-1.8', fallback: [ 'pcl', 'tracking_dep' ])
 else
-    # TODO 
+    glm_sp = subproject('glm')
+    glm_dep = glm_sp.get_variable('glm_dep')
+
+    png_sp = subproject('libpng')
+    libpng_dep = png_sp.get_variable('png_dep')
+
+    pcl_sp = subproject('pcl')
+    pcl_deps = []
+    pcl_deps += pcl_sp.get_variable('common_dep')
+    pcl_deps += pcl_sp.get_variable('segmentation_dep')
 endif
+
+freenect_dep = dependency('libfreenect', required: false)
+if freenect_dep.found()
+    client_api_defines += [ '-DUSE_FREENECT' ]
+endif
+    
+glfw_dep = dependency('glfw3', required: false)
+epoxy_dep = dependency('epoxy', required: false)
+snappy_dep = dependency('snappy', required: false)
 
 if use_pcl_gbpd
     pcl_deps += dependency('pcl_people-1.8')
@@ -101,12 +108,29 @@ client_api_deps = [
     libpng_dep,
     epoxy_dep,
     dlib_dep,
-    boost_deps,
     pcl_deps,
     freenect_dep,
     vtk_common_dep,
 ]
 
+shared_library('glimpse-unity-plugin',
+               [ 'src/glimpse_unity.cc' ] + client_api_src,
+               include_directories: inc,
+               dependencies: client_api_deps,
+               cpp_args: client_api_defines)
+
+if not meson.is_cross_build()
+
+shared_library('glimpse',
+               [ 'src/image_utils.cc',
+                 'src/infer.cc',
+                 'src/loader.cc',
+                 'src/tinyexr.cc',
+                 'src/parson.c',
+                 'src/llist.c',
+                 'src/xalloc.c' ],
+               include_directories: inc,
+               dependencies: [ libpng_dep, threads_dep ])
 
 executable('image-pre-processor',
            [ 'src/image-pre-processor.cc',
@@ -190,36 +214,24 @@ executable('pfm-debug',
            [ 'src/pfm-debug.c' ],
            include_directories: inc)
 
-snappy_dep = dependency('snappy')
-executable('pack-training-data',
-           [ 'src/pack-training-data.cc',
-             'src/pack.c',
-             'src/image_utils.cc',
-             'src/tinyexr.cc',
-             'src/llist.c',
-             'src/xalloc.c' ],
-           include_directories: inc,
-           dependencies: [ snappy_dep, libpng_dep, threads_dep ])
-
-shared_library('glimpse',
-               [ 'src/image_utils.cc',
-                 'src/infer.cc',
-                 'src/loader.cc',
+if snappy_dep.found()
+    executable('pack-training-data',
+               [ 'src/pack-training-data.cc',
+                 'src/pack.c',
+                 'src/image_utils.cc',
                  'src/tinyexr.cc',
-                 'src/parson.c',
                  'src/llist.c',
                  'src/xalloc.c' ],
                include_directories: inc,
-               dependencies: [ libpng_dep, threads_dep ])
+               dependencies: [ snappy_dep, libpng_dep, threads_dep ])
+endif
 
-shared_library('glimpse-unity-plugin',
-               [ 'src/glimpse_unity.cc' ] + client_api_src,
+if glfw_dep.found() and epoxy_dep.found()
+    executable('glimpse_viewer',
+               [ 'src/glimpse_viewer.cc' ] + client_api_src + imgui_src,
                include_directories: inc,
-               dependencies: client_api_deps,
+               dependencies: client_api_deps + [ glfw_dep ],
                cpp_args: client_api_defines)
+endif
 
-executable('glimpse_viewer',
-           [ 'src/glimpse_viewer.cc' ] + client_api_src + imgui_src,
-           include_directories: inc,
-           dependencies: client_api_deps + [ glfw_dep ],
-           cpp_args: client_api_defines)
+endif # is_cross_build
