Update gitignore to be a bit more useful for the average checkout

--- a/.gitignore
+++ b/.gitignore
@@ -3,19 +3,39 @@ __pycache__
 tags
 cscope.*
 *.o
-src/.deps
-src/depth2labels
-src/exr-to-pfm
-src/image-pre-processor
-src/libglimpse.so
-src/pack-training-data
-src/pfm-debug
-src/pfm-to-exr
-src/rdt-to-json
-src/train_joint_params
-src/train_rdt
-src/python/build
-src/python/dist
-src/python/glimpse.egg-info
-src/python/glimpse.py
-src/python/glimpse_wrap.cpp
+imgui.ini
+joint-dist.json
+joint-params.json
+tree?.rdt
+tree?.json
+/blender
+/build*
+/src/.deps
+/src/depth2labels
+/src/exr-to-pfm
+/src/image-pre-processor
+/src/libglimpse.so
+/src/pack-training-data
+/src/pfm-debug
+/src/pfm-to-exr
+/src/rdt-to-json
+/src/train_joint_params
+/src/train_rdt
+/src/python/build
+/src/python/dist
+/src/python/glimpse.egg-info
+/src/python/glimpse.py
+/src/python/glimpse_wrap.cpp
+/subprojects/boost_1_65_1
+/subprojects/dlib
+/subprojects/eigen-git-mirror-3.3.4
+/subprojects/flann-1.9.1
+/subprojects/glm-0.9.9-a2
+/subprojects/libpng-1.6.17
+/subprojects/pcl
+/subprojects/packagecache/0.9.9-a2.tar.gz
+/subprojects/packagecache/1.9.1.tar.gz
+/subprojects/packagecache/boost_1_65_1.tar.bz2
+/subprojects/packagecache/eigen-git-mirror-3.3.4.zip
+/subprojects/packagecache/libpng-1.6.17.tar.xz
+/subprojects/packagecache/tmp*
