Use libepoxy even on Android
We had to make a minor upstream fix to libepoxy to correctly build for
Android (which is why we're pointing to a fork under
github.com/glimpse-project/libepoxy) but otherwise the library seems to
Just Works as intended.

--- a/meson.build
+++ b/meson.build
@@ -83,7 +83,7 @@ endif
 client_api_defines += [ '-DUSE_FREENECT' ]
     
 glfw_dep = dependency('glfw3', required: false)
-epoxy_dep = dependency('epoxy', required: false)
+epoxy_dep = dependency('epoxy', fallback: [ 'libepoxy', 'libepoxy_dep' ])
 snappy_dep = dependency('snappy', required: false)
 
 imgui_src = [
