unity: start enabling Java usage with Android plugin
On Android we need to use Java to properly initialize Tango.

This adds a stub GlimpseTest.java which Meson compiles and packs into a
GlimpseTest.jar that gets installed to the Unity project's
Assets/Plugins/Android directory.

glimpse_unity.cc has some boilerplate to get the JNIEnv pointer and
instantiate the GlimpseTest class.

The install script was cleaned up in several ways, and has been renamed
install_glimpse.py as we anticipate also using it to install a native
Android test application soon too.

Since the 'install' target has the unwanted side effect of installing
subproject files (namely libepoxy files) there is now an
'install_plugin' target that only runs out install_glimpse.py script.

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,2 +1,4 @@
 option('use_system_libs', type : 'boolean', value : true,
        description: 'Whether to generally link with system libraries')
+option('tango_sdk', type : 'string',
+       description: 'Absolute path to unpacked Tango SDK')
