meson: move java code to src/java
To deal with the restrictions of the meson jar() function this adds a
src/java/meson.build to declare the .jar target which is referenced via
subdir() in our top meson.build.

The install script needed a minor tweak so we don't try and duplicate
the 'src/java/' hierarchy under the install location too.

--- a/meson.build
+++ b/meson.build
@@ -191,13 +191,7 @@ if support_unity
 
     plugin_install_deps = [ plugin_lib ]
     if compiler.get_define('__ANDROID__') != ''
-        unity_java_src = [
-            'com/impossible/glimpse/GlimpseTest.java'
-        ]
-        android_sdk_jar = join_paths(android_sdk_home, 'platforms/android-23/android.jar')
-        unity_java_jar = jar('GlimpseTest',
-                             unity_java_src,
-                             java_args: [ '-classpath',  android_sdk_jar ])
+        subdir('src/java')
         plugin_install_deps += unity_java_jar
     endif
 endif
