Fix build dependencies for glimpse_viewer_android

--- a/meson.build
+++ b/meson.build
@@ -208,12 +208,12 @@ if compiler.get_define('__ANDROID__') != ''
 
     imgui_src += 'src/imgui/imgui_impl_glfm_gles3.cpp'
 
-    shared_library('glimpse_viewer_android',
-                   [ 'src/glimpse_viewer.cc' ] + client_api_src + imgui_src,
-                   include_directories: inc,
-                   dependencies: client_api_deps + [ glfm_dep ],
-                   c_args: client_api_defines + glfm_defines,
-                   cpp_args: client_api_defines + glfm_defines)
+    android_viewer = shared_library('glimpse_viewer_android',
+        [ 'src/glimpse_viewer.cc' ] + client_api_src + imgui_src,
+        include_directories: inc,
+        dependencies: client_api_deps + [ glfm_dep ],
+        c_args: client_api_defines + glfm_defines,
+        cpp_args: client_api_defines + glfm_defines)
 endif
 
 if not meson.is_cross_build()
@@ -373,5 +373,5 @@ if compiler.get_define('__ANDROID__') != ''
 
     run_target('install_viewer',
                command: [ 'install_glimpse.py'] +  install_args,
-               depends: plugin_install_deps)
+               depends: [ android_viewer ])
 endif
